--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,36 +3,35 @@ requires = [ "setuptools",]
 build-backend = "setuptools.build_meta"
 
 [project]
-requires-python = ">=3.9"
-name = "vessel_failure_detection"
+requires-python = ">=3.13"
+name = "oge-failure-detection"
 readme = "README.md"
 dynamic = [ "version",]
 dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=0.19.15",]
 
 [project.scripts]
-vessel-failure-detection = "vessel_failure_detection.__main__:main"
+oge-failure-detection = "oge-failure-detection.__main__:main"
 
 [project.optional-dependencies]
 dev = [ "pytest-cov~=3.0", "pytest-mock>=1.7.1, <2.0", "pytest~=7.2", "ruff~=0.1.8",]
 
 [tool.kedro]
-package_name = "vessel_failure_detection"
-project_name = "vessel-failure-detection"
+package_name = "oge-failure-detection"
+project_name = "oge-failure-detection"
 kedro_init_version = "0.19.15"
 tools = "['Linting', 'Testing', 'Custom Logging', 'Data Structure']"
 example_pipeline = "False"
 source_dir = "src"
 
-[tool.ruff]
-line-length = 88
-show-fixes = true
-select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
-ignore = [ "E501",]
+[tool.black]
+line-length = 100
+target-version = ["py37"]
+include = '\.pyi?$'
 
 [project.entry-points."kedro.hooks"]
 
 [tool.pytest.ini_options]
-addopts = "--cov-report term-missing --cov src/vessel_failure_detection -ra"
+addopts = "--cov-report term-missing --cov src/oge-failure-detection -ra"
 
 [tool.coverage.report]
 fail_under = 0
@@ -43,7 +42,7 @@ exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]
 docstring-code-format = true
 
 [tool.setuptools.dynamic.version]
-attr = "vessel_failure_detection.__version__"
+attr = "oge-failure-detection.__version__"
 
 [tool.setuptools.packages.find]
 where = [ "src",]
